--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,45 +9,45 @@
 
     <!-- Album -->
     <string name="album_title_bookmarks">
-        Bookmarks
+        العلامات
     </string>
     <string name="album_title_history">
-        History
+        السجل
     </string>
     <string name="album_title_home">
-        Home
+        الرئيسية
     </string>
     <string name="album_untitled">
-        Untitled
+        بدون عنوان
     </string>
 
     <!-- Clear -->
     <string name="clear_label">
-        Clear
+        تنظيف
     </string>
     <string name="clear_menu_done_all">
-        All Done
+        تمت العملية
     </string>
     <string name="clear_title_quit">
-        Clear When the Application Exits
+        التنظيف عند الخروج من البرنامج
     </string>
     <string name="clear_title_bookmarks">
-        Clear Bookmarks
+        تنظيف العلامات
     </string>
     <string name="clear_title_cache">
-        Clear Cache
+        تنظيف الملفات المؤقتة
     </string>
     <string name="clear_title_cookie">
-        Clear Cookies
+        تنظيف ملفات تعريف الارتباط
     </string>
     <string name="clear_title_form_data">
-        Clear Form data
+        تنظيف البيانات
     </string>
     <string name="clear_title_history">
-        Clear History
+        مسح السجلات
     </string>
     <string name="clear_title_passwords">
-        Clear Passwords
+        مسح كلمات المرور
     </string>
 
     <!-- Dialog -->
@@ -61,13 +61,13 @@
         Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2228.0 Safari/537.36
     </string>
     <string name="dialog_sign_in_username">
-        Username
+        اسم المستخدم
     </string>
     <string name="dialog_sign_in_password">
-        Password
+        كلمة المرور
     </string>
     <string name="dialog_button_positive">
-        OK
+        حسنا
     </string>
     <string name="dialog_button_negative">
         Cancel
@@ -103,24 +103,24 @@
 
     <!-- List -->
     <string name="list_empty">
-        Current list is empty
+        القائمة الحالية فارغة
     </string>
 
     <!-- Main -->
     <string name="main_menu_new_tab">
-        Open in a new tab
+        فتح في علامة تبويب جديدة
     </string>
     <string name="main_menu_copy_link">
-        Copy link
+        نسخ الرابط
     </string>
     <string name="main_menu_save">
-        Save as
+        حفظ ك
     </string>
     <string name="main_omnibox_input_hint">
-        Search or type URL
+        بحث أو ادخال عنوان URL
     </string>
     <string name="main_relayout_ok">
-        OK
+        حسنا
     </string>
     <string name="main_about_blank">
         about:blank
@@ -128,18 +128,18 @@
 
     <!-- Notification -->
     <string name="notification_content_holder">
-        Click to View Pages
+        اضغط لعرض الصفحات
     </string>
 
     <!-- Readability -->
     <string name="readability_label">
-        Readability Mode
+        وضع القراءة
     </string>
     <string name="readability_menu_background">
-        Background
+        الخلفية
     </string>
     <string name="readability_menu_share">
-        Share
+        مشاركة
     </string>
     <string name="readability_empty">
         ERROR: Failed to access Readability Server. Please check access token and Internet connection.
@@ -147,20 +147,20 @@
 
     <!-- Search -->
     <string name="search_hint">
-        Search
+        بحث
     </string>
 
     <!-- Settings -->
     <string name="setting_label">
-        Settings
+        الضبط
     </string>
     <!-- Browser settings -->
     <string name="setting_title_browser">
-        Browser Settings
+        اعدادات المتصفح
     </string>
     <!-- Search engine -->
     <string name="setting_title_search_engine">
-        Search Engine
+        محرك البحث
     </string>
     <string name="setting_summary_search_engine_google">
         Google
@@ -169,7 +169,7 @@
         DuckDuckGo
     </string>
     <string name="setting_summary_search_engine_startpage">
-        StartPage
+        صفحة البدء
     </string>
     <string name="setting_summary_search_engine_bing">
         Bing
@@ -178,14 +178,14 @@
         Baidu
     </string>
     <string name="setting_summary_search_engine_custom">
-        Custom
+        مخصص
     </string>
     <!-- Notification -->
     <string name="setting_title_notification_priority">
         Notification Priority
     </string>
     <string name="setting_summary_notification_priority_default">
-        Default
+        افتراضي
     </string>
     <string name="setting_summary_notification_priority_high">
         High
@@ -195,20 +195,20 @@
     </string>
     <!-- Theme -->
     <string name="setting_theme_light">
-        Light
+        فاتح
     </string>
     <string name="setting_theme_dark">
-        Dark
+        مظلم
     </string>
     <!-- Omnibox switcher -->
     <string name="setting_title_omnibox_position">
         Omnibox Position
     </string>
     <string name="setting_summary_omnibox_position_top">
-        Top
+        الاعلى
     </string>
     <string name="setting_summary_omnibox_position_bottom">
-        Bottom
+        الاسفل
     </string>
     <!-- Omnibox control -->
     <string name="setting_title_omnibox_control">
@@ -246,103 +246,102 @@
     </string>
     <!-- JavaScript -->
     <string name="setting_title_javascript">
-        JavaScript
+        الجافا سكريبت
     </string>
     <string name="setting_summary_javascript">
-        Enable JavaScript
+        تمكين الجافا سكريبت
     </string>
     <!-- Location -->
     <string name="setting_title_location">
-        Location
+        الموقع
     </string>
     <string name="setting_summary_location">
-        Allow websites to access your location
+        السماح للمواقع بالوصول إلى موقعك
     </string>
     <!-- Multiple windows -->
     <string name="setting_title_multiple_windows">
-        Multiple Windows
+        نوافذ متعددة
     </string>
     <string name="setting_summary_multiple_windows">
-        Enable Multiple windows
+        تفعيل نوافذ متعددة
     </string>
     <!-- Scroll bar -->
     <string name="setting_title_scroll_bar">
-        Scroll Bar
+        شريط التمرير
     </string>
     <string name="setting_summary_scroll_bar">
-        Show scroll bar on Webpages
+        عرض شريط التمرير في صفحات الويب
     </string>
     <!-- Text reflow -->
     <string name="setting_title_text_reflow">
-        Text Reflow
+        إنحسر النص
     </string>
     <string name="setting_summary_text_reflow">
-        Enable text reflow
+        تفعيل إنحسر النص
     </string>
     <!-- User Agent -->
     <string name="setting_title_user_agent">
-        User Agent
+        وكيل المستخدم
     </string>
     <string name="setting_summary_user_agent_default">
-        Default
+        افتراضي
     </string>
     <string name="setting_summary_user_agent_desktop">
-        Desktop
+        سطح المكتب
     </string>
     <string name="setting_summary_user_agent_custom">
-        Custom
+        مخصص
     </string>
     <!-- Rendering -->
     <string name="setting_title_rendering">
         Rendering
     </string>
     <string name="setting_summary_rendering_default">
-        Default
+        افتراضي
     </string>
     <string name="setting_summary_rendering_grayscale">
-        Grayscale
+        رمادي
     </string>
     <string name="setting_summary_rendering_inverted">
-        Inverted
+        مقتبس
     </string>
     <string name="setting_summary_rendering_inverted_grayscale">
-        Inverted Grayscale
+        رمادي معكوس
     </string>
     <!-- Fullscreen mode -->
     <string name="setting_title_fullscreen">
-        Fullscreen mode
+        وضع ملء الشاشة
     </string>
     <string name="setting_summary_fullscreen">
-        Enable fullscreen mode
+        تفعيل وضع ملء الشاشة
     </string>
     <!-- Restore tabs -->
     <string name="setting_title_restore_tabs">
-        Restore Tabs
+        استعادة علامات التبويب
     </string>
     <string name="setting_summary_restore_tabs">
-        Restore tabs from previous sessions
+       استعادة علامات التبويب من الدورات السابقة
     </string>
     <!-- AdBlock setting -->
     <string name="setting_title_adblock">
-        AdBlock
+        حظر الاعلانات
     </string>
     <string name="setting_summary_adblock">
-        Enable AdBlock
+        تفعيل حظر الاعلان
     </string>
     <string name="setting_title_whitelist">
-        Whitelist
+        القائمة البيضاء
     </string>
     <string name="setting_summary_whitelist">
-        Allow these sites show ads
+        السماح لهذه المواقع بان تظهر الإعلانات
     </string>
     <string name="setting_title_export_whitelist">
-        Export Whitelist
+        تصدير القائمة البيضاء
     </string>
     <string name="setting_title_import_whitelist">
-        Import Whitelist
-    </string>
+        استيراد القائمة البيضاء
     <string name="whitelist_filename">
-        Whitelist
+        القائمة البيضاء
     </string>
     <!-- Readability settings -->
     <string name="setting_title_readability">
@@ -359,24 +358,24 @@
     </string>
     <!-- Data setting -->
     <string name="setting_title_data">
-        Data
+        البيانات
     </string>
     <!-- Passwords -->
     <string name="setting_title_passwords">
-        Passwords
+        كلمات المرور
     </string>
     <string name="setting_summary_passwords">
-        Save Passwords
+        حفظ كلمات المرور
     </string>
     <!-- Bookmarks -->
     <string name="setting_title_export_bookmarks">
-        Export Bookmarks
+        تصدير العلامات
     </string>
     <string name="setting_title_import_bookmarks">
-        Import Bookmarks
+        استيراد العلامات
     </string>
     <string name="bookmarks_filename">
-        Bookmarks
+        العلامات
     </string>
     <!-- Clear -->
     <string name="setting_title_clear_control">
@@ -384,33 +383,33 @@
     </string>
     <!-- Others setting -->
     <string name="setting_title_others">
-        Others
+        اخرى
     </string>
     <!-- Version -->
     <string name="setting_title_version">
-        Version
+        الاصدار
     </string>
     <!-- License -->
     <string name="setting_title_license">
-        License
+        الرخصة
     </string>
     <!-- Contact -->
     <string name="setting_title_update">
-        Check for Updates
+        التحقق من التحديثات
     </string>
 
     <!-- Toast -->
     <string name="toast_add_bookmark_successful">
-        Successfully added to Bookmarks
+        تمت الاضافة الى العلامات بنجاح
     </string>
     <string name="toast_add_bookmark_failed">
-        Can\'t add this page to Bookmarks
+        لا يمكن اضافة هذه الصفحة الى العلامات
     </string>
     <string name="toast_add_to_home_successful">
-        Successfully added to Homepage
+        تمت الاضافة الى الرئيسية بنجاح
     </string>
     <string name="toast_add_to_home_failed">
-        Failed to add to the Homepage
+        فشلت الاضافة
     </string>
     <string name="toast_add_token_successful">
         Successfully added Readability Token
@@ -422,28 +421,28 @@
         Already at the front
     </string>
     <string name="toast_already_exist_in_home">
-        Already exists at Homepage
+        موجود بالفعل في الصفحة الرئيسية
     </string>
     <string name="toast_clear_successful">
-        Successfully Cleared
+        تم التنظيف بنجاح
     </string>
     <string name="toast_clear_failed">
-        Failed to Clear
+        فشل التنظيف
     </string>
     <string name="toast_copy_successful">
-        Successfully Copied
+        تم النسخ بنجاح
     </string>
     <string name="toast_delete_bookmark_successful">
-        Successfully Deleted Bookmark
+        تم حذف العلامة بنجاح
     </string>
     <string name="toast_delete_successful">
-        Successfully Deleted
+        تم الحذف بنجاح
     </string>
     <string name="toast_domain_already_exists">
-        Domain already exists in the Whitelist
+        اسم النطاق موجود مسبقا في القائمة البيضاء
     </string>
     <string name="toast_double_taps_quit">
-        Press again to exit
+        اضغط مرة أخرى للخروج
     </string>
     <string name="toast_emoji">
         つ◕ل͜◕)つ
@@ -452,49 +451,49 @@
         Exported Bookmarks file at:&#160;
     </string>
     <string name="toast_export_bookmarks_failed">
-        Failed to export Bookmarks
+        فشل في تصدير العلامات
     </string>
     <string name="toast_export_whitelist_successful">
         Exported Whitelist file at:&#160;
     </string>
     <string name="toast_export_whitelist_failed">
-        Failed to export Whitelist
+        فشل في تصدير القوائم البيضاء
     </string>
     <string name="toast_import_bookmarks_successful">
         Imported Bookmarks count:&#160;
     </string>
     <string name="toast_import_bookmarks_failed">
-        Failed to import Bookmarks
+        فشل استراد العلامات
     </string>
     <string name="toast_import_whitelist_successful">
         Imported Domains count:&#160;
     </string>
     <string name="toast_import_whitelist_failed">
-        Failed to import Whitelist
+        فشل استيراد القوائم البيضاء
     </string>
     <string name="toast_input_empty">
         You haven\'t input anything
     </string>
     <string name="toast_invalid_domain">
-        Invalid Domain
+        اسم نطاق غير صالحة
     </string>
     <string name="toast_load_error">
-        Can\'t load this URL
+        لا يمكن تحميل هذا الرابط
     </string>
     <string name="toast_load_in_background">
-        Loading in background
+        التحميل في الخلفية
     </string>
     <string name="toast_need_restart">
-        Please restart the application for changes to take effect
+        يرجى إعادة تشغيل التطبيق لتنفيذ التغيرات
     </string>
     <string name="toast_new_tab_successful">
-        Successfully Opened in a new tab
+        تم الفتح في علامة تبويب جديدة
     </string>
     <string name="toast_open_file_manager_failed">
-        Failed to open File Manager
+        فشل في فتح مدير الملفات
     </string>
     <string name="toast_refresh_failed">
-        Can\'t refresh this page
+        لا يمكن اعادة تحميل الصفحة
     </string>
     <string name="toast_cannot_forward">
         Can\'t go forward
@@ -506,13 +505,13 @@
         Saved screenshot at:&#160;
     </string>
     <string name="toast_screenshot_failed">
-        Failed to capture a screenshot
+        فشل حفط لقطة الشاشة
     </string>
     <string name="toast_share_failed">
-        Can\'t share this page
+        لا يمكن مشاركة هذه الصفحة
     </string>
     <string name="toast_start_download">
-        Starting download
+        بدء التحميل
     </string>
     <string name="toast_token_empty">
         Please set Readability token
@@ -529,7 +528,7 @@
         Readability Token
     </string>
     <string name="token_add">
-        Add
+        إضافة
     </string>
     <string name="token_desc">
         Go to https://www.readability.com/developers/api to get your own Readability token
@@ -537,43 +536,43 @@
 
     <!-- Whitelist -->
     <string name="whitelist_label">
-        Whitelist
+        القائمة البيضاء
     </string>
     <string name="whitelist_menu_clear">
-        Clear
+        تنظيف
     </string>
     <string name="whitelist_edit_hint">
-        Domain
+        اسم النطاق
     </string>
     <string name="whitelist_add">
-        Add
+        إضافة
     </string>
 
     <!-- Intro -->
     <string name="title_activity_intro">
-        Intro
+        مقدمة
     </string>
 
     <!-- Open in app -->
     <string name="open_in_app_snackbar_title">
-         Open in app?
+         فتح في التطبيق؟
     </string>
     <string name="open_in_app_snackbar_action_title">
-         OPEN
+         فتح
     </string>
 
     <!-- Crashlytics-->
     <string name="com.crashlytics.CrashSubmissionPromptTitle">
-        Send Crash Report?
+        إرسال تقرير الخطأ؟
     </string>
     <string name="com.crashlytics.CrashSubmissionPromptMessage">
-        Looks like we crashed! Please help us fix the problem by sending a crash report.
+        يبدو أن التطبيق انهار! يرجى مساعدتنا في حل المشكلة عن طريق إرسال تقرير الحادث.
     </string>
     <string name="com.crashlytics.CrashSubmissionSendTitle">
-        Send
+        إرسال
     </string>
     <string name="com.crashlytics.CrashSubmissionAlwaysSendTitle">
-        Always Send
+        دائما إرسال
     </string>
     <string name="com.crashlytics.CrashSubmissionCancelTitle">
         Don\'t Send
